# jstudio-commander

./: .gitignore  AUDIT_2026-04-15.md  AUDIT_TOKENS_2026-04-15.md  CODER_BRAIN.md  COMMANDER_IDE_RESEARCH.md  CTO_BRIEF.md  DECISIONS.md  PM_HANDOFF.md  STATE.md  STATE.mdcd  TUNNEL.md  TUNNEL_AUDIT_2026-04-15.md  UI_AUDIT_2026-04-15.md  package.json  pnpm-lock.yaml
audits/: PHASE_P_E2E.md  PHASE_P_QA.md  PHASE_P_SECURITY.md  PHASE_P_UI.md  PHASE_S1_DISPLAY_AUDIT.md  PHASE_U1_INVESTIGATION.md  PHASE_U1_PANE_59_CAPTURE.txt
client/: index.html  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
client/e2e/: README.md  core-flows.spec.ts  helpers.ts  hook-stop-flip.spec.ts  session-creation.spec.ts  statusline-tick.spec.ts
client/public/: manifest.webmanifest
client/scripts/: preflight.mjs
client/src/: App.tsx  index.css
command-center/: .gitignore  README.md  biome.json  package.json  tsconfig.base.json
command-center/apps/shell/src-tauri/: Cargo.toml  tauri.conf.json
command-center/apps/shell/src-tauri/capabilities/: default.json
command-center/apps/shell/src-tauri/icons/: icon.icns
command-center/apps/shell/src-tauri/src/: lib.rs  main.rs
command-center/scripts/: post-tauri-sign.sh
docs/: 15.3-diagnostic.md  COMMAND_CENTER_ARCHITECTURE_v2.md  CTO_SNAPSHOT.md  CTO_STATE_commander.md  MIGRATION_PLAN.md  SESSION_SPAWN_BREAKDOWN.md  TOKEN_ANALYTICS_2026-04-17.md  candidate-36-diagnostic.md  phase-y-closeout.md  phase-y-rotation-1-6-diagnostic.md
docs/briefs/: CTO_BRIEF_15.3_close.md  CTO_BRIEF_2026-04-20_phase_T_tmux_mirror.md  CTO_BRIEF_2026-04-22_COMMANDER_FINALIZER_CLOSED.md  CTO_BRIEF_codeman_model_phase.md  CTO_FULL_REHYDRATION_2026-04-21.md  CTO_N1_CLOSE_BRIEF.md  CTO_N2.1_CLOSE_BRIEF.md  CTO_N2_CLOSE_BRIEF.md  CTO_N3_CLOSE_BRIEF.md  CTO_N4a.1_CLOSE_BRIEF.md  CTO_N4a_CLOSE_BRIEF.md  CTO_RESPONSE_2026-04-20_15.3_close.md  CTO_RESPONSE_2026-04-20_codeman_phase.md  CTO_RESPONSE_2026-04-20_phase_T_draft_review.md  CTO_RESPONSE_2026-04-20_phase_Y_draft_review.md  CTO_RESPONSE_2026-04-23_N4a.1_close_and_N4b_gating.md  M3.6_SPLIT_MANIFEST.md  M7_M8_MIGRATION_BRIEF.md  NATIVE_REBUILD_SCOPING_BRIEF.md  PHASE_V_BRIEF.md  PHASE_Z_NATIVE_APP_PLAN.md
docs/command-center/: ARCHITECTURE_SPEC.md  COMMAND_CENTER_ROADMAP.md  DECISIONS.md
docs/dispatches/: 15.3_FIX_ROTATION_DISPATCH.md  15.3_INSTRUMENTATION_DISPATCH.md  15.3_TIER_A_CODE_DISPATCH.md  15.3_v5_INVESTIGATION_DISPATCH.md  CANDIDATE_22_DISPATCH.md  CANDIDATE_36_INSTRUMENTATION_DISPATCH.md  CANDIDATE_TRIAGE_BATCH_DISPATCH.md  COMMANDER_FINALIZER_DISPATCH.md  COMMANDER_FINALIZER_PART2_DISPATCH.md  COMMANDER_FINALIZER_PART2_FINAL_DISPATCH.md  M1_DISPATCH.md  M3.6v2_DISPATCH.md  M5_BATCH1_DISPATCH.md  M5_BATCH2_DISPATCH.md  M5_BATCH3_DISPATCH.md  M5_OVAGAS_DISPATCH.md  M7_MVP_STATE_MD_PANE_DISPATCH.md  M8_EFFORT_UI_DISPATCH.md  M8_SECONDARY_CREATESESSIONMODAL_EFFORT_DISPATCH.md  N2_DISPATCH_UI_SURFACES.md  (+17 more)
hooks/: commander-hook.js  commander-hook.sh
native-v1/: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
native-v1/apps/shell/src-tauri/: Cargo.toml  tauri.conf.json
native-v1/apps/shell/src-tauri/capabilities/: default.json
native-v1/apps/shell/src-tauri/src/: lib.rs  main.rs
scripts/: install-hooks.mjs  install-statusline.mjs  uninstall-statusline.mjs
server/: package.json  tsconfig.json
(+464 files in other folders)
