[package]
name = "jstudio-commander-shell"
version = "0.1.0-n1"
description = "JStudio Commander native v1 — Tauri shell"
authors = ["Jose Miguel Bonilla"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "jstudio_commander_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-single-instance = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Default features; no platform-specific gating yet.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
