[package]
name = "jstudio-commander-shell"
version = "0.1.0-n1"
description = "JStudio Commander native v1 — Tauri shell"
authors = ["Jose Miguel Bonilla"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "jstudio_commander_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-single-instance = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
# N2.1.1 Task 4: `devtools` enables right-click → Inspect Element in release
# builds for smoke/diagnostic use. OFF by default — `pnpm build:app` produces
# a no-inspector release. `pnpm build:app:debug` passes --features devtools
# to tauri CLI so Jose (or CODER for smoke-readiness) can inspect without
# switching to dev mode.
devtools = ["tauri/devtools"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
